fix realted events cards

--- a/frontend/templates/ebook_detalle.html
+++ b/frontend/templates/ebook_detalle.html
@@ -127,7 +127,8 @@
             </div>
         </div>
 
-        <!-- Related Ebooks -->
+        <!--Related Ebooks - No se usa por el momento (en caso de querer usarlo descomentar y comentar )
+          
         {% if ebooks_relacionados %}
         <div class="related-products">
             <h2 class="related-title">Ebooks relacionados</h2>
@@ -161,7 +162,7 @@
         {% endif %}
     </div>
 </div>
-
+-->
 <script src="/static/script.js"></script>
 
 <style>
