--- a/frontend/templates/limpieza_energetica.html
+++ b/frontend/templates/limpieza_energetica.html
@@ -36,11 +36,7 @@
                         espirituales, y restaurando el equilibrio en tu energía personal. <br>
                         Al final del taller, podrás aplicar estas prácticas de manera independiente en 
                         tu vida diaria.
-                        </p>
-                        <br>
-                    <div class="info-elements">
-                        <a href="/eventos-disponibles?categoria=23" class="btn btn-info">Ver fechas disponibles</a>
-                    </div>
+                        </p>                                            
             </div>
         </div>
     </section>
@@ -90,6 +86,10 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="container centrar-elementos">    
+        <a href="/eventos-disponibles?categoria=23" class="btn btn-info">Ver fechas disponibles</a>
     </section>
 
     <!-- Sección de Contacto -->
