--- a/frontend/templates/partials/header.html
+++ b/frontend/templates/partials/header.html
@@ -18,7 +18,7 @@
                 <ul class="main-menu">
                     <li class="has-submenu">
                         <a href="#">
-                            Alimentación <span class="submenu-arrow"> > </span>
+                            Alimentación <span class="submenu-arrow">  <i class="fa-solid fa-chevron-right"></i> </span>
                         </a>
                         <ul class="submenu">                            
                             <li><a href="/alimentacion">Asesoramiento individualizado</a></li>
@@ -28,21 +28,21 @@
                         </ul>
                     </li>
                     <li class="has-submenu">
-                        <a href="#">Yoga <span class="submenu-arrow"> > </span></a>
+                        <a href="#">Yoga <span class="submenu-arrow">  <i class="fa-solid fa-chevron-right"></i> </span></a>
                         <ul class="submenu">
                             <li><a href="/yoga">Clases Hatha Yoga</a></li>
                             <li><a href="/yoga-gong">Yoga y Gong</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
-                        <a href="#">Terapias <span class="submenu-arrow"> > </span></a>
+                        <a href="#">Terapias <span class="submenu-arrow">  <i class="fa-solid fa-chevron-right"></i> </span></a>
                         <ul class="submenu">
                             <li><a href="/reiki-sesion">Sesión de Reiki</a></li>
                             <li><a href="/pendulo-hebreo">Péndulo hebreo</a></li>
                             <li><a href="/terapia-floral">Terapia floral</a></li>
                             <li><a href="/constelaciones">Constelaciones</a></li>
                             <li class="has-submenu">
-                                <a href="#">Talleres <span class="submenu-arrow"> > </span></a>
+                                <a href="#">Talleres <span class="submenu-arrow">  <i class="fa-solid fa-chevron-right"></i> </span></a>
                                 <ul class="submenu">
                                     <li><a href="/reiki-iniciacion">Iniciación en Reiki</a></li>
                                     <li ><a href="/ritual-utero" >Ritual del útero</a></li>
