--- a/frontend/templates/reiki_iniciacion.html
+++ b/frontend/templates/reiki_iniciacion.html
@@ -33,9 +33,7 @@
                         mismo u otra persona, animal o planta.
                         </p>
                         <br>
-                    <div class="info-elements">
-                        <a href="/eventos-disponibles?categoria=11" class="btn btn-info">Ver fechas disponibles</a>
-                    </div>
+                    
             </div>
         </div>
     </section>
@@ -84,6 +82,10 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="container centrar-elementos">    
+        <a href="/eventos-disponibles?categoria=11" class="btn btn-info">Ver fechas disponibles</a>    
     </section>
     
     
