--- a/frontend/templates/ritual_utero.html
+++ b/frontend/templates/ritual_utero.html
@@ -44,10 +44,7 @@
                         Para profundizar este proceso, te llevarás como herramienta un tratamiento de 
                         sanación energética que se realiza mediante el uso de Huevo de Obsidiana.
                         </p>
-                    <br>
-                    <div class="info-elements">
-                        <a href="/eventos-disponibles?categoria=22" class="btn btn-info">Ver fechas disponibles</a>
-                    </div>
+                    <br>                    
             </div>
         </div>
     </section>
@@ -94,6 +91,10 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="container centrar-elementos">    
+        <a href="/eventos-disponibles?categoria=22" class="btn btn-info">Ver fechas disponibles</a>    
     </section>
 
     <!-- Sección de Contacto -->
